# twinmind-v2

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/scripts/: eval_agent.py  generate_trajectory_fixtures.py  simulate_long_conversation.py
backend/src/app/: __init__.py  config.py  errors.py  main.py
backend/src/app/api/: expansion.py  export.py  health.py  settings.py  suggestions.py  transcription.py
backend/src/app/core/: cancellation.py  dedup.py  fact_policy.py  history.py  ranking.py  result_cache.py  runtime_api_key_store.py  runtime_settings_store.py  session_store.py  state_builder.py
backend/src/app/graph/: state.py  workflow.py
backend/src/app/graph/nodes/: build_state.py  finalize.py  rank_and_draft.py  verify_factcheck.py
backend/src/app/llm/: groq_client.py  parser.py  prompts.py  transcription_client.py
backend/src/app/retrieval/: evidence_cache.py  web_search.py
backend/src/app/schemas/: common.py  llm.py  session.py  settings.py  suggestions.py  transcription.py
backend/tests/: conftest.py  test_assertion_dsl.py  test_trajectory_mocked_contracts.py  test_trajectory_smoke.py
backend/tests/fixtures/: sample_refresh_request.json  trajectory_sessions.json
backend/tests/integration/: test_api.py  test_transcription_api.py
backend/tests/support/: assertion_dsl.py  build_mock_llm.py  trajectory_loader.py
backend/tests/unit/: test_finalize.py  test_llm_parser.py  test_ranking.py  test_state_builder.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+11 files in other folders)
